--- a/style.css
+++ b/style.css
@@ -221,10 +221,111 @@ header{
     justify-content: center;
     align-items: center;
 }
-.main_offer_arrow_itself img:nth-of-type(2){
+.main_offer_arrow_itself img{
+    width: 40%;
+    height: 30%;
+}
+#prev img{
     rotate: 180deg;
 }
-.main_offer_slider_container{
-    width: 62%;
+.main_offer_slider_absolute{
+    width: 56%;
     height: 100%;
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+.main_offer_slider_container{
+    width: 200%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    right: 50%;
+}
+.main_offer_slider_pill_container{
+    width: 16.66%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    transition: 0.5s all ease;
+    left: 0;
+}
+.main_offer_slider_pill{
+    width: 100%;
+    height: 75%;
+    background-color: gray;
+    border-radius: calc(var(--index) * 10);
+    position: relative;
+    transition: 0.5s all ease;
+    left: 0;
+}
+.main_offer_slider_pill_top{
+    width: 100%;
+    height: 48%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-top-left-radius: calc(var(--index) * 7);
+    border-top-right-radius: calc(var(--index) * 7);
+}
+#pill_1_img{
+    background-image: url(img/pill-1.jpg);
+}
+#pill_2_img{
+    background-image: url(img/pill-2.jpeg);
+}
+#pill_3_img{
+    background-image: url(img/pill-3.jpg);
+}
+#pill_1{
+    scale: 0.75;
+    opacity: 0.75;
+}
+#pill_2{
+    scale: 1;
+    opacity: 1;
+}
+#pill_3{
+    scale: 0.75;
+    opacity: 0.75;
+}
+#pill_4{
+    scale: 0.75;
+    opacity: 0.75;
+}
+#pill_5{
+    scale: 0.75;
+    opacity: 0.75;
+}
+.main_offer_slider_pill_border{
+    width: 100%;
+    height: 4%;
+    background-color: #87E9FF;
+}
+.main_offer_slider_pill_text{
+    width: 90%;
+    height: 43%;
+    padding: 5%;
+    color: white;
+    font-size: calc(var(--index) * 1.5);
+    font-weight: 700;
+    margin-top: calc(var(--index) * -0.5);
+}
+
+footer{
+    background-color: #87E9FF;
+    width: 100%;
+    height: calc(var(--index) * 5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: calc(var(--index) * 1.5);
+    font-weight: 700;
+    -webkit-text-stroke: black calc(var(--index) * 0.05);
 }
